// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`newsletter snapshots > matches the mailing snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="de">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
    <meta content="light" name="color-scheme" />
    <meta content="light" name="supported-color-schemes" />
    <title>
      Aufstieg perfekt gemacht, alle Termine und die News aus den Abteilungen.
    </title>
    <style></style>
    <style>
      @media only screen and (max-width: 620px) {
      	.email-container { width: 100% !important; }
      	.stack { display: block !important; width: 100% !important; }
      	.stack-gap { padding-top: 32px !important; }
      	.gutter { display: none !important; }
      	img { max-width: 100% !important; height: auto !important; }
      }
    </style>
  </head>
  <body
    dir="ltr"
    lang="en"
    style="background-color:rgb(242,242,242);margin:0;padding:0">
    <!--$--><!--html--><!--head-->
    <div
      style="display:none;overflow:hidden;line-height:1px;opacity:0;max-height:0;max-width:0"
      data-skip-in-text="true">
      Aufstieg perfekt gemacht, alle Termine und die News aus den Abteilungen.
      <div>
         ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿
      </div>
    </div>
    <!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style='margin:0;background-color:rgb(242,242,242);padding:0;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif'>
            <table
              align="center"
              width="100%"
              class="email-container"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="max-width:100%;margin-right:auto;margin-left:auto;margin-bottom:24px;margin-top:24px;width:600px;overflow:hidden;border-radius:8px;background-color:rgb(255,255,255)">
              <tbody>
                <tr style="width:100%">
                  <td style="padding:0">
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="background-color:rgb(51,44,97);text-align:center">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-bottom:32px;padding-top:32px">
                            <img
                              alt="TSG Irlich"
                              height="120"
                              src="https://www.tsg-irlich.de/tsg-irlich-logo.png"
                              style="display:block;outline:none;border:none;text-decoration:none;margin-right:auto;margin-left:auto"
                              width="160" />
                            <p
                              style='font-size:11px;line-height:24px;margin:0;margin-top:20px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:2px;color:rgb(255,212,4);text-transform:uppercase;margin-bottom:0;margin-left:0;margin-right:0'>
                              Newsletter · Juli 2026
                            </p>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-top:32px">
                            <p
                              style='font-size:15px;line-height:24px;margin:0;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(22,22,22);margin-top:0;margin-bottom:0;margin-left:0;margin-right:0'>
                              Hallo TSG-Familie!
                            </p>
                            <p
                              style='font-size:15px;line-height:24px;margin:0;margin-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                              Hier kommen die wichtigsten Neuigkeiten aus dem
                              Verein, die nächsten Termine und ein Blick auf
                              das, was uns in den kommenden Wochen erwartet.
                            </p>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation">
                      <tbody>
                        <tr>
                          <td style="padding-top:32px">
                            <img
                              alt="Aufstieg perfekt gemacht"
                              height="315"
                              src="https://placehold.co/600x315/332c61/ffd404/png?text=Titelstory"
                              style="display:block;outline:none;border:none;text-decoration:none;width:100%"
                              width="600" />
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody>
                                <tr>
                                  <td
                                    style="padding-right:32px;padding-left:32px;padding-top:32px">
                                    <table
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody>
                                        <tr>
                                          <td valign="middle" width="40">
                                            <div
                                              style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                               
                                            </div>
                                          </td>
                                          <td
                                            valign="middle"
                                            style='padding-right:12px;padding-left:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:11px;font-weight:700;letter-spacing:2px;color:rgb(66,72,83);text-transform:uppercase'>
                                            Titelstory
                                          </td>
                                          <td valign="middle" width="40">
                                            <div
                                              style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                               
                                            </div>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                    <h1
                                      style='font-family:Impact,"Arial Narrow Bold","Arial Black",sans-serif;margin:0;margin-top:16px;font-size:32px;line-height:36px;letter-spacing:0.5px;color:rgb(22,22,22);text-transform:uppercase'>
                                      Aufstieg perfekt gemacht
                                    </h1>
                                    <p
                                      style='font-size:15px;line-height:24px;margin:0;margin-top:16px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Nach einer starken Saison steigt unsere
                                      erste Mannschaft auf. Wir blicken zurück
                                      auf die entscheidenden Wochen, sprechen
                                      mit dem Trainerteam und schauen voraus auf
                                      die neue Liga.
                                    </p>
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation"
                                      style="margin-top:24px">
                                      <tbody>
                                        <tr>
                                          <td>
                                            <table
                                              align="left"
                                              cellpadding="0"
                                              cellspacing="0"
                                              role="presentation"
                                              style="border-collapse:separate">
                                              <tbody>
                                                <tr>
                                                  <td
                                                    style="border-radius:9999px;padding:5px;background-color:rgb(255,212,4)">
                                                    <a
                                                      href="https://www.tsg-irlich.de/news"
                                                      style='color:rgb(22,22,22);text-decoration-line:none;display:inline-block;border-radius:9999px;border-style:solid;border-width:1px;padding-right:28px;padding-left:28px;padding-bottom:12px;padding-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:15px;font-weight:700;border-color:rgb(22,22,22)'
                                                      target="_blank"
                                                      >Ganze Story lesen</a
                                                    >
                                                  </td>
                                                </tr>
                                              </tbody>
                                            </table>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-top:40px">
                            <table
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody>
                                <tr>
                                  <td valign="middle" width="40">
                                    <div
                                      style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                       
                                    </div>
                                  </td>
                                  <td
                                    valign="middle"
                                    style='padding-right:12px;padding-left:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:11px;font-weight:700;letter-spacing:2px;color:rgb(66,72,83);text-transform:uppercase'>
                                    Blick voraus
                                  </td>
                                  <td valign="middle" width="40">
                                    <div
                                      style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                       
                                    </div>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <p
                              style='font-size:15px;line-height:24px;margin:0;margin-top:16px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                              Was bei uns bald ansteht:
                            </p>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody>
                                <tr>
                                  <td>
                                    <hr
                                      style="width:100%;border:none;border-color:rgb(180,180,180);border-top:1px solid #eaeaea;margin-bottom:16px;margin-top:16px" />
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            valign="top"
                                            width="56"
                                            data-id="__react-email-column">
                                            <table
                                              cellpadding="0"
                                              cellspacing="0"
                                              role="presentation"
                                              width="56">
                                              <tbody>
                                                <tr>
                                                  <td
                                                    align="center"
                                                    height="68"
                                                    valign="middle"
                                                    width="56"
                                                    style="border-radius:8px;background-color:rgb(255,212,4);padding-bottom:8px;padding-top:8px">
                                                    <div
                                                      style='font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:10px;line-height:14px;font-weight:700;letter-spacing:1px;color:rgb(22,22,22);text-transform:uppercase'>
                                                      Mi
                                                    </div>
                                                    <div
                                                      style='font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:20px;line-height:22px;font-weight:700;color:rgb(22,22,22)'>
                                                      12
                                                    </div>
                                                    <div
                                                      style='font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:10px;line-height:14px;font-weight:700;letter-spacing:1px;color:rgb(22,22,22);text-transform:uppercase'>
                                                      Aug
                                                    </div>
                                                  </td>
                                                </tr>
                                              </tbody>
                                            </table>
                                          </td>
                                          <td
                                            valign="middle"
                                            data-id="__react-email-column"
                                            style="padding-left:16px">
                                            <p
                                              style='font-size:16px;line-height:22px;margin:0;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-weight:700;color:rgb(22,22,22);margin-top:0;margin-bottom:0;margin-left:0;margin-right:0'>
                                              Sommerfest der TSG
                                            </p>
                                            <p
                                              style='font-size:13px;line-height:18px;margin:0;margin-top:4px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                                              Pappelstadion · 14:00 Uhr
                                            </p>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-top:40px">
                            <table
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody>
                                <tr>
                                  <td valign="middle" width="40">
                                    <div
                                      style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                       
                                    </div>
                                  </td>
                                  <td
                                    valign="middle"
                                    style='padding-right:12px;padding-left:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:11px;font-weight:700;letter-spacing:2px;color:rgb(66,72,83);text-transform:uppercase'>
                                    Aus dem Verein
                                  </td>
                                  <td valign="middle" width="40">
                                    <div
                                      style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                       
                                    </div>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <p
                              style='font-size:15px;line-height:24px;margin:0;margin-top:16px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                              Die letzten Neuigkeiten aus unseren Abteilungen:
                            </p>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation"
                              style="margin-top:24px">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    class="stack"
                                    valign="top"
                                    width="256"
                                    data-id="__react-email-column">
                                    <img
                                      alt="Neue Trainingszeiten ab August"
                                      height="144"
                                      src="https://placehold.co/256x144/332c61/ffd404/png?text=News+1"
                                      style="display:block;outline:none;border:none;text-decoration:none;width:100%;border-radius:8px"
                                      width="256" />
                                    <p
                                      style='font-size:11px;line-height:24px;margin:0;margin-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:1.5px;color:rgb(51,44,97);text-transform:uppercase;margin-bottom:0;margin-left:0;margin-right:0'>
                                      Fußball
                                    </p>
                                    <p
                                      style='font-size:18px;line-height:24px;font-family:Impact,"Arial Narrow Bold","Arial Black",sans-serif;margin:0;margin-top:8px;color:rgb(22,22,22);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Neue Trainingszeiten ab August
                                    </p>
                                    <p
                                      style='font-size:14px;line-height:21px;margin:0;margin-top:8px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Die neue Trainingsrunde startet nach den
                                      Ferien mit erweiterten Zeiten.
                                    </p>
                                    <a
                                      href="https://www.tsg-irlich.de/news"
                                      style='color:rgb(51,44,97);text-decoration-line:none;margin-top:10px;display:inline-block;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:14px;font-weight:700'
                                      target="_blank"
                                      >Weiterlesen →</a
                                    >
                                  </td>
                                  <td
                                    class="gutter"
                                    width="24"
                                    data-id="__react-email-column">
                                     
                                  </td>
                                  <td
                                    class="stack stack-gap"
                                    valign="top"
                                    width="256"
                                    data-id="__react-email-column">
                                    <img
                                      alt="Zwei Neuzugänge für die Damen"
                                      height="144"
                                      src="https://placehold.co/256x144/332c61/ffd404/png?text=News+2"
                                      style="display:block;outline:none;border:none;text-decoration:none;width:100%;border-radius:8px"
                                      width="256" />
                                    <p
                                      style='font-size:11px;line-height:24px;margin:0;margin-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:1.5px;color:rgb(51,44,97);text-transform:uppercase;margin-bottom:0;margin-left:0;margin-right:0'>
                                      Handball
                                    </p>
                                    <p
                                      style='font-size:18px;line-height:24px;font-family:Impact,"Arial Narrow Bold","Arial Black",sans-serif;margin:0;margin-top:8px;color:rgb(22,22,22);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Zwei Neuzugänge für die Damen
                                    </p>
                                    <p
                                      style='font-size:14px;line-height:21px;margin:0;margin-top:8px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Unsere Damenmannschaft verstärkt sich für
                                      die kommende Spielzeit.
                                    </p>
                                    <a
                                      href="https://www.tsg-irlich.de/news"
                                      style='color:rgb(51,44,97);text-decoration-line:none;margin-top:10px;display:inline-block;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:14px;font-weight:700'
                                      target="_blank"
                                      >Weiterlesen →</a
                                    >
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-top:40px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation"
                              style="border-radius:12px;border-style:solid;border-width:1px;border-color:rgb(180,180,180);background-color:rgb(242,242,242);text-align:center">
                              <tbody>
                                <tr>
                                  <td
                                    style="padding-right:24px;padding-left:24px;padding-bottom:24px;padding-top:24px">
                                    <p
                                      style='font-size:10px;line-height:24px;margin:0;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:2px;color:rgb(66,72,83);text-transform:uppercase;margin-top:0;margin-bottom:0;margin-left:0;margin-right:0'>
                                      Sponsor dieser Ausgabe
                                    </p>
                                    <img
                                      alt="Musterfirma GmbH"
                                      src="https://placehold.co/160x60/332c61/ffd404/png?text=Sponsor"
                                      style="display:block;outline:none;border:none;text-decoration:none;margin-right:auto;margin-left:auto;margin-top:16px;height:auto;max-height:60px;width:auto;max-width:160px"
                                      width="160" />
                                    <p
                                      style='font-size:14px;line-height:21px;margin:0;margin-top:16px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Die Musterfirma GmbH unterstützt unsere
                                      Jugendabteilung seit 2019 und macht damit
                                      Training und Ausrüstung für viele Kinder
                                      möglich.
                                    </p>
                                    <a
                                      href="https://www.tsg-irlich.de/sponsoren"
                                      style='color:rgb(51,44,97);text-decoration-line:none;margin-top:12px;display:inline-block;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:14px;font-weight:700'
                                      target="_blank"
                                      >Musterfirma GmbH<!-- -->
                                      kennenlernen →</a
                                    >
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="margin-top:40px;background-color:rgb(51,44,97);text-align:center">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-bottom:40px;padding-top:40px">
                            <h2
                              style='font-family:Impact,"Arial Narrow Bold","Arial Black",sans-serif;margin:0;font-size:26px;line-height:30px;letter-spacing:0.5px;color:rgb(252,252,252);text-transform:uppercase'>
                              Werde Teil der TSG
                            </h2>
                            <p
                              style='font-size:15px;line-height:24px;margin:0;margin-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(225,225,225);margin-bottom:0;margin-left:0;margin-right:0'>
                              Viele Abteilungen, ein Verein. Finde dein Angebot
                              und werde Teil der TSG Irlich.
                            </p>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation"
                              style="margin-top:24px">
                              <tbody>
                                <tr>
                                  <td>
                                    <table
                                      align="center"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation"
                                      style="border-collapse:separate">
                                      <tbody>
                                        <tr>
                                          <td
                                            style="border-radius:9999px;padding:5px;background-color:rgb(255,212,4)">
                                            <a
                                              href="https://www.tsg-irlich.de/mitgliedschaft"
                                              style='color:rgb(22,22,22);text-decoration-line:none;display:inline-block;border-radius:9999px;border-style:solid;border-width:1px;padding-right:28px;padding-left:28px;padding-bottom:12px;padding-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:15px;font-weight:700;border-color:rgb(22,22,22)'
                                              target="_blank"
                                              >Mitglied werden</a
                                            >
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <div
                      style="background-color:rgb(255,212,4);font-size:1px;height:4px;line-height:4px">
                       
                    </div>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="background-color:rgb(51,44,97);text-align:center">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-bottom:32px;padding-top:32px">
                            <img
                              alt="TSG Irlich"
                              height="60"
                              src="https://www.tsg-irlich.de/tsg-irlich-logo.png"
                              style="display:block;outline:none;border:none;text-decoration:none;margin-right:auto;margin-left:auto"
                              width="80" />
                            <p
                              style='font-size:13px;line-height:20px;margin:0;margin-top:16px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(252,252,252);margin-bottom:0;margin-left:0;margin-right:0'>
                              TSG Irlich<br />Gotenstraße 20 · 56567 Neuwied<br /><a
                                href="mailto:info@tsg-irlich.de"
                                style="color:rgb(255,212,4);text-decoration-line:none;font-weight:700"
                                target="_blank"
                                >info@tsg-irlich.de</a
                              >
                            </p>
                            <p
                              style='font-size:13px;line-height:20px;margin:0;margin-top:20px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(252,252,252);margin-bottom:0;margin-left:0;margin-right:0'>
                              <a
                                href="https://www.instagram.com"
                                style="color:rgb(255,212,4);text-decoration-line:none;font-weight:700"
                                target="_blank"
                                >Instagram</a
                              >
                              ·
                              <a
                                href="https://www.facebook.com"
                                style="color:rgb(255,212,4);text-decoration-line:none;font-weight:700"
                                target="_blank"
                                >Facebook</a
                              >
                              ·
                              <a
                                href="https://www.youtube.com"
                                style="color:rgb(255,212,4);text-decoration-line:none;font-weight:700"
                                target="_blank"
                                >YouTube</a
                              >
                            </p>
                            <p
                              style='font-size:12px;line-height:18px;margin:0;margin-top:20px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(225,225,225);margin-bottom:0;margin-left:0;margin-right:0'>
                              ©<!-- -->2026<!-- -->
                              TSG Irlich. Alle Rechte vorbehalten.
                            </p>
                            <p
                              style='font-size:12px;line-height:18px;margin:0;margin-top:8px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(225,225,225);margin-bottom:0;margin-left:0;margin-right:0'>
                              <a
                                href="{ONLINE_VERSION}"
                                style="color:rgb(225,225,225);text-decoration-line:none"
                                target="_blank"
                                >Im Browser ansehen</a
                              >
                              ·
                              <a
                                href="{UNSUBSCRIBE}"
                                style="color:rgb(225,225,225);text-decoration-line:none"
                                target="_blank"
                                >Newsletter abbestellen</a
                              >
                            </p>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`newsletter snapshots > matches the template snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="de">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
    <meta content="light" name="color-scheme" />
    <meta content="light" name="supported-color-schemes" />
    <title>
      Aufstieg perfekt gemacht, alle Termine und die News aus den Abteilungen.
    </title>
    <style></style>
    <style>
      @media only screen and (max-width: 620px) {
      	.email-container { width: 100% !important; }
      	.stack { display: block !important; width: 100% !important; }
      	.stack-gap { padding-top: 32px !important; }
      	.gutter { display: none !important; }
      	img { max-width: 100% !important; height: auto !important; }
      }
    </style>
  </head>
  <body
    dir="ltr"
    lang="en"
    style="background-color:rgb(242,242,242);margin:0;padding:0">
    <!--$--><!--html--><!--head-->
    <div
      style="display:none;overflow:hidden;line-height:1px;opacity:0;max-height:0;max-width:0"
      data-skip-in-text="true">
      Aufstieg perfekt gemacht, alle Termine und die News aus den Abteilungen.
      <div>
         ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿ ‌​‍‎‏﻿
      </div>
    </div>
    <!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style='margin:0;background-color:rgb(242,242,242);padding:0;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif'>
            <table
              align="center"
              width="100%"
              class="email-container"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="max-width:100%;margin-right:auto;margin-left:auto;margin-bottom:24px;margin-top:24px;width:600px;overflow:hidden;border-radius:8px;background-color:rgb(255,255,255)">
              <tbody>
                <tr style="width:100%">
                  <td style="padding:0">
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="background-color:rgb(51,44,97);text-align:center">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-bottom:32px;padding-top:32px">
                            <img
                              alt="TSG Irlich"
                              height="120"
                              src="https://www.tsg-irlich.de/tsg-irlich-logo.png"
                              style="display:block;outline:none;border:none;text-decoration:none;margin-right:auto;margin-left:auto"
                              width="160" /><!--#html mode="textonly"#-->
                            <p
                              style='font-size:11px;line-height:24px;margin:0;margin-top:20px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:2px;color:rgb(255,212,4);text-transform:uppercase;margin-bottom:0;margin-left:0;margin-right:0'>
                              Newsletter · Juli 2026
                            </p>
                            <!--#/html#-->
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-top:32px">
                            <!--#html mode="default"#-->
                            <p
                              style='font-size:15px;line-height:24px;margin:0;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(22,22,22);margin-top:0;margin-bottom:0;margin-left:0;margin-right:0'>
                              Hallo TSG-Familie!
                            </p>
                            <!--#/html#--><!--#html mode="default"#-->
                            <p
                              style='font-size:15px;line-height:24px;margin:0;margin-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                              Hier kommen die wichtigsten Neuigkeiten aus dem
                              Verein, die nächsten Termine und ein Blick auf
                              das, was uns in den kommenden Wochen erwartet.
                            </p>
                            <!--#/html#-->
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation">
                      <tbody>
                        <tr>
                          <td style="padding-top:32px">
                            <!--#image align="center"#--><img
                              alt="Aufstieg perfekt gemacht"
                              height="315"
                              src="https://placehold.co/600x315/332c61/ffd404/png?text=Titelstory"
                              style="display:block;outline:none;border:none;text-decoration:none;width:100%"
                              width="600" /><!--#/image#-->
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody>
                                <tr>
                                  <td
                                    style="padding-right:32px;padding-left:32px;padding-top:32px">
                                    <table
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody>
                                        <tr>
                                          <td valign="middle" width="40">
                                            <div
                                              style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                               
                                            </div>
                                          </td>
                                          <td
                                            valign="middle"
                                            style='padding-right:12px;padding-left:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:11px;font-weight:700;letter-spacing:2px;color:rgb(66,72,83);text-transform:uppercase'>
                                            <!--#html mode="textonly"#-->Titelstory<!--#/html#-->
                                          </td>
                                          <td valign="middle" width="40">
                                            <div
                                              style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                               
                                            </div>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                    <!--#html mode="default"#-->
                                    <h1
                                      style='font-family:Impact,"Arial Narrow Bold","Arial Black",sans-serif;margin:0;margin-top:16px;font-size:32px;line-height:36px;letter-spacing:0.5px;color:rgb(22,22,22);text-transform:uppercase'>
                                      Aufstieg perfekt gemacht
                                    </h1>
                                    <!--#/html#--><!--#html mode="default"#-->
                                    <p
                                      style='font-size:15px;line-height:24px;margin:0;margin-top:16px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Nach einer starken Saison steigt unsere
                                      erste Mannschaft auf. Wir blicken zurück
                                      auf die entscheidenden Wochen, sprechen
                                      mit dem Trainerteam und schauen voraus auf
                                      die neue Liga.
                                    </p>
                                    <!--#/html#-->
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation"
                                      style="margin-top:24px">
                                      <tbody>
                                        <tr>
                                          <td>
                                            <table
                                              align="left"
                                              cellpadding="0"
                                              cellspacing="0"
                                              role="presentation"
                                              style="border-collapse:separate">
                                              <tbody>
                                                <tr>
                                                  <td
                                                    style="border-radius:9999px;padding:5px;background-color:rgb(255,212,4)">
                                                    <!--#html mode="default"#--><a
                                                      href="https://www.tsg-irlich.de/news"
                                                      style='color:rgb(22,22,22);text-decoration-line:none;display:inline-block;border-radius:9999px;border-style:solid;border-width:1px;padding-right:28px;padding-left:28px;padding-bottom:12px;padding-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:15px;font-weight:700;border-color:rgb(22,22,22)'
                                                      target="_blank"
                                                      >Ganze Story lesen</a
                                                    ><!--#/html#-->
                                                  </td>
                                                </tr>
                                              </tbody>
                                            </table>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-top:40px">
                            <table
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody>
                                <tr>
                                  <td valign="middle" width="40">
                                    <div
                                      style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                       
                                    </div>
                                  </td>
                                  <td
                                    valign="middle"
                                    style='padding-right:12px;padding-left:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:11px;font-weight:700;letter-spacing:2px;color:rgb(66,72,83);text-transform:uppercase'>
                                    <!--#html mode="textonly"#-->Blick voraus<!--#/html#-->
                                  </td>
                                  <td valign="middle" width="40">
                                    <div
                                      style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                       
                                    </div>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <!--#html mode="default"#-->
                            <p
                              style='font-size:15px;line-height:24px;margin:0;margin-top:16px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                              Was bei uns bald ansteht:
                            </p>
                            <!--#/html#--><!--#loop#--><!--#loopitem name="Termin"#-->
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody>
                                <tr>
                                  <td>
                                    <hr
                                      style="width:100%;border:none;border-color:rgb(180,180,180);border-top:1px solid #eaeaea;margin-bottom:16px;margin-top:16px" />
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            valign="top"
                                            width="56"
                                            data-id="__react-email-column">
                                            <table
                                              cellpadding="0"
                                              cellspacing="0"
                                              role="presentation"
                                              width="56">
                                              <tbody>
                                                <tr>
                                                  <td
                                                    align="center"
                                                    height="68"
                                                    valign="middle"
                                                    width="56"
                                                    style="border-radius:8px;background-color:rgb(255,212,4);padding-bottom:8px;padding-top:8px">
                                                    <div
                                                      style='font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:10px;line-height:14px;font-weight:700;letter-spacing:1px;color:rgb(22,22,22);text-transform:uppercase'>
                                                      <!--#html mode="textonly"#-->Mi<!--#/html#-->
                                                    </div>
                                                    <div
                                                      style='font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:20px;line-height:22px;font-weight:700;color:rgb(22,22,22)'>
                                                      <!--#html mode="textonly"#-->12<!--#/html#-->
                                                    </div>
                                                    <div
                                                      style='font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:10px;line-height:14px;font-weight:700;letter-spacing:1px;color:rgb(22,22,22);text-transform:uppercase'>
                                                      <!--#html mode="textonly"#-->Aug<!--#/html#-->
                                                    </div>
                                                  </td>
                                                </tr>
                                              </tbody>
                                            </table>
                                          </td>
                                          <td
                                            valign="middle"
                                            data-id="__react-email-column"
                                            style="padding-left:16px">
                                            <!--#html mode="default"#-->
                                            <p
                                              style='font-size:16px;line-height:22px;margin:0;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-weight:700;color:rgb(22,22,22);margin-top:0;margin-bottom:0;margin-left:0;margin-right:0'>
                                              Sommerfest der TSG
                                            </p>
                                            <!--#/html#--><!--#html mode="default"#-->
                                            <p
                                              style='font-size:13px;line-height:18px;margin:0;margin-top:4px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                                              Pappelstadion · 14:00 Uhr
                                            </p>
                                            <!--#/html#-->
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <!--#/loopitem#--><!--#/loop#-->
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-top:40px">
                            <table
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody>
                                <tr>
                                  <td valign="middle" width="40">
                                    <div
                                      style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                       
                                    </div>
                                  </td>
                                  <td
                                    valign="middle"
                                    style='padding-right:12px;padding-left:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:11px;font-weight:700;letter-spacing:2px;color:rgb(66,72,83);text-transform:uppercase'>
                                    <!--#html mode="textonly"#-->Aus dem Verein<!--#/html#-->
                                  </td>
                                  <td valign="middle" width="40">
                                    <div
                                      style="background-color:rgb(180,180,180);font-size:1px;height:1px;line-height:1px">
                                       
                                    </div>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <!--#html mode="default"#-->
                            <p
                              style='font-size:15px;line-height:24px;margin:0;margin-top:16px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                              Die letzten Neuigkeiten aus unseren Abteilungen:
                            </p>
                            <!--#/html#--><!--#loop#--><!--#loopitem name="News-Zeile"#-->
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation"
                              style="margin-top:24px">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    class="stack"
                                    valign="top"
                                    width="256"
                                    data-id="__react-email-column">
                                    <!--#image align="center"#--><img
                                      alt="Neue Trainingszeiten ab August"
                                      height="144"
                                      src="https://placehold.co/256x144/332c61/ffd404/png?text=News+1"
                                      style="display:block;outline:none;border:none;text-decoration:none;width:100%;border-radius:8px"
                                      width="256" /><!--#/image#--><!--#html mode="textonly"#-->
                                    <p
                                      style='font-size:11px;line-height:24px;margin:0;margin-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:1.5px;color:rgb(51,44,97);text-transform:uppercase;margin-bottom:0;margin-left:0;margin-right:0'>
                                      Fußball
                                    </p>
                                    <!--#/html#--><!--#html mode="default"#-->
                                    <p
                                      style='font-size:18px;line-height:24px;font-family:Impact,"Arial Narrow Bold","Arial Black",sans-serif;margin:0;margin-top:8px;color:rgb(22,22,22);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Neue Trainingszeiten ab August
                                    </p>
                                    <!--#/html#--><!--#html mode="default"#-->
                                    <p
                                      style='font-size:14px;line-height:21px;margin:0;margin-top:8px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Die neue Trainingsrunde startet nach den
                                      Ferien mit erweiterten Zeiten.
                                    </p>
                                    <!--#/html#--><!--#html mode="default"#--><a
                                      href="https://www.tsg-irlich.de/news"
                                      style='color:rgb(51,44,97);text-decoration-line:none;margin-top:10px;display:inline-block;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:14px;font-weight:700'
                                      target="_blank"
                                      >Weiterlesen →</a
                                    ><!--#/html#-->
                                  </td>
                                  <td
                                    class="gutter"
                                    width="24"
                                    data-id="__react-email-column">
                                     
                                  </td>
                                  <td
                                    class="stack stack-gap"
                                    valign="top"
                                    width="256"
                                    data-id="__react-email-column">
                                    <!--#image align="center"#--><img
                                      alt="Zwei Neuzugänge für die Damen"
                                      height="144"
                                      src="https://placehold.co/256x144/332c61/ffd404/png?text=News+2"
                                      style="display:block;outline:none;border:none;text-decoration:none;width:100%;border-radius:8px"
                                      width="256" /><!--#/image#--><!--#html mode="textonly"#-->
                                    <p
                                      style='font-size:11px;line-height:24px;margin:0;margin-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:1.5px;color:rgb(51,44,97);text-transform:uppercase;margin-bottom:0;margin-left:0;margin-right:0'>
                                      Handball
                                    </p>
                                    <!--#/html#--><!--#html mode="default"#-->
                                    <p
                                      style='font-size:18px;line-height:24px;font-family:Impact,"Arial Narrow Bold","Arial Black",sans-serif;margin:0;margin-top:8px;color:rgb(22,22,22);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Zwei Neuzugänge für die Damen
                                    </p>
                                    <!--#/html#--><!--#html mode="default"#-->
                                    <p
                                      style='font-size:14px;line-height:21px;margin:0;margin-top:8px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Unsere Damenmannschaft verstärkt sich für
                                      die kommende Spielzeit.
                                    </p>
                                    <!--#/html#--><!--#html mode="default"#--><a
                                      href="https://www.tsg-irlich.de/news"
                                      style='color:rgb(51,44,97);text-decoration-line:none;margin-top:10px;display:inline-block;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:14px;font-weight:700'
                                      target="_blank"
                                      >Weiterlesen →</a
                                    ><!--#/html#-->
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <!--#/loopitem#--><!--#/loop#-->
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <!--#loop#--><!--#loopitem name="Sponsor"#-->
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-top:40px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation"
                              style="border-radius:12px;border-style:solid;border-width:1px;border-color:rgb(180,180,180);background-color:rgb(242,242,242);text-align:center">
                              <tbody>
                                <tr>
                                  <td
                                    style="padding-right:24px;padding-left:24px;padding-bottom:24px;padding-top:24px">
                                    <!--#html mode="textonly"#-->
                                    <p
                                      style='font-size:10px;line-height:24px;margin:0;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-weight:700;letter-spacing:2px;color:rgb(66,72,83);text-transform:uppercase;margin-top:0;margin-bottom:0;margin-left:0;margin-right:0'>
                                      Sponsor dieser Ausgabe
                                    </p>
                                    <!--#/html#--><!--#image align="center"#--><img
                                      alt="Musterfirma GmbH"
                                      src="https://placehold.co/160x60/332c61/ffd404/png?text=Sponsor"
                                      style="display:block;outline:none;border:none;text-decoration:none;margin-right:auto;margin-left:auto;margin-top:16px;height:auto;max-height:60px;width:auto;max-width:160px"
                                      width="160" /><!--#/image#--><!--#html mode="default"#-->
                                    <p
                                      style='font-size:14px;line-height:21px;margin:0;margin-top:16px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(66,72,83);margin-bottom:0;margin-left:0;margin-right:0'>
                                      Die Musterfirma GmbH unterstützt unsere
                                      Jugendabteilung seit 2019 und macht damit
                                      Training und Ausrüstung für viele Kinder
                                      möglich.
                                    </p>
                                    <!--#/html#--><!--#html mode="default"#--><a
                                      href="https://www.tsg-irlich.de/sponsoren"
                                      style='color:rgb(51,44,97);text-decoration-line:none;margin-top:12px;display:inline-block;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:14px;font-weight:700'
                                      target="_blank"
                                      >Musterfirma GmbH kennenlernen →</a
                                    ><!--#/html#-->
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <!--#/loopitem#--><!--#/loop#-->
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="margin-top:40px;background-color:rgb(51,44,97);text-align:center">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-bottom:40px;padding-top:40px">
                            <!--#html mode="default"#-->
                            <h2
                              style='font-family:Impact,"Arial Narrow Bold","Arial Black",sans-serif;margin:0;font-size:26px;line-height:30px;letter-spacing:0.5px;color:rgb(252,252,252);text-transform:uppercase'>
                              Werde Teil der TSG
                            </h2>
                            <!--#/html#--><!--#html mode="default"#-->
                            <p
                              style='font-size:15px;line-height:24px;margin:0;margin-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(225,225,225);margin-bottom:0;margin-left:0;margin-right:0'>
                              Viele Abteilungen, ein Verein. Finde dein Angebot
                              und werde Teil der TSG Irlich.
                            </p>
                            <!--#/html#-->
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation"
                              style="margin-top:24px">
                              <tbody>
                                <tr>
                                  <td>
                                    <table
                                      align="center"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation"
                                      style="border-collapse:separate">
                                      <tbody>
                                        <tr>
                                          <td
                                            style="border-radius:9999px;padding:5px;background-color:rgb(255,212,4)">
                                            <!--#html mode="default"#--><a
                                              href="https://www.tsg-irlich.de/mitgliedschaft"
                                              style='color:rgb(22,22,22);text-decoration-line:none;display:inline-block;border-radius:9999px;border-style:solid;border-width:1px;padding-right:28px;padding-left:28px;padding-bottom:12px;padding-top:12px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;font-size:15px;font-weight:700;border-color:rgb(22,22,22)'
                                              target="_blank"
                                              >Mitglied werden</a
                                            ><!--#/html#-->
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <div
                      style="background-color:rgb(255,212,4);font-size:1px;height:4px;line-height:4px">
                       
                    </div>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="background-color:rgb(51,44,97);text-align:center">
                      <tbody>
                        <tr>
                          <td
                            style="padding-right:32px;padding-left:32px;padding-bottom:32px;padding-top:32px">
                            <img
                              alt="TSG Irlich"
                              height="60"
                              src="https://www.tsg-irlich.de/tsg-irlich-logo.png"
                              style="display:block;outline:none;border:none;text-decoration:none;margin-right:auto;margin-left:auto"
                              width="80" />
                            <p
                              style='font-size:13px;line-height:20px;margin:0;margin-top:16px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(252,252,252);margin-bottom:0;margin-left:0;margin-right:0'>
                              TSG Irlich<br />Gotenstraße 20 · 56567 Neuwied<br /><a
                                href="mailto:info@tsg-irlich.de"
                                style="color:rgb(255,212,4);text-decoration-line:none;font-weight:700"
                                target="_blank"
                                >info@tsg-irlich.de</a
                              >
                            </p>
                            <p
                              style='font-size:13px;line-height:20px;margin:0;margin-top:20px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(252,252,252);margin-bottom:0;margin-left:0;margin-right:0'>
                              <a
                                href="https://www.instagram.com"
                                style="color:rgb(255,212,4);text-decoration-line:none;font-weight:700"
                                target="_blank"
                                >Instagram</a
                              >
                              ·
                              <a
                                href="https://www.facebook.com"
                                style="color:rgb(255,212,4);text-decoration-line:none;font-weight:700"
                                target="_blank"
                                >Facebook</a
                              >
                              ·
                              <a
                                href="https://www.youtube.com"
                                style="color:rgb(255,212,4);text-decoration-line:none;font-weight:700"
                                target="_blank"
                                >YouTube</a
                              >
                            </p>
                            <p
                              style='font-size:12px;line-height:18px;margin:0;margin-top:20px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(225,225,225);margin-bottom:0;margin-left:0;margin-right:0'>
                              ©2026 TSG Irlich. Alle Rechte vorbehalten.
                            </p>
                            <p
                              style='font-size:12px;line-height:18px;margin:0;margin-top:8px;font-family:-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:rgb(225,225,225);margin-bottom:0;margin-left:0;margin-right:0'>
                              <a
                                href="{ONLINE_VERSION}"
                                style="color:rgb(225,225,225);text-decoration-line:none"
                                target="_blank"
                                >Im Browser ansehen</a
                              >
                              ·
                              <a
                                href="{UNSUBSCRIBE}"
                                style="color:rgb(225,225,225);text-decoration-line:none"
                                target="_blank"
                                >Newsletter abbestellen</a
                              >
                            </p>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;
